// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Relationships createRelationshipsNode adds value when relationshipsList is present match snapshot 1`] = `
{
  "edges": {
    "fields": [
      {
        "config": {},
        "labels": undefined,
        "name": "id",
        "type": "string",
        "values": [
          "test",
        ],
      },
      {
        "config": {},
        "labels": undefined,
        "name": "source",
        "type": "string",
        "values": [
          "test-source",
        ],
      },
      {
        "config": {},
        "labels": undefined,
        "name": "target",
        "type": "string",
        "values": [
          "test-target",
        ],
      },
      {
        "config": {},
        "labels": undefined,
        "name": "mainStat",
        "type": "string",
        "values": [
          "Test Label ExternalId",
        ],
      },
    ],
    "meta": {
      "preferredVisualisationType": "nodeGraph",
    },
    "name": "edges",
    "refId": "A",
  },
  "nodes": {
    "fields": [
      {
        "config": {},
        "labels": undefined,
        "name": "id",
        "type": "string",
        "values": [
          "test-source",
          "test-target",
        ],
      },
      {
        "config": {},
        "labels": undefined,
        "name": "title",
        "type": "string",
        "values": [
          "test source description",
          "Test Target descriptipn",
        ],
      },
      {
        "config": {},
        "labels": undefined,
        "name": "mainStat",
        "type": "string",
        "values": [
          "Test Source",
          "Test  Target",
        ],
      },
    ],
    "meta": {
      "preferredVisualisationType": "nodeGraph",
    },
    "name": "nodes",
    "refId": "A",
  },
}
`;

exports[`Relationships createRelationshipsNode with empty relationships list match snapshot 1`] = `
{
  "edges": {
    "fields": [
      {
        "config": {},
        "labels": undefined,
        "name": "id",
        "type": "string",
        "values": [],
      },
      {
        "config": {},
        "labels": undefined,
        "name": "source",
        "type": "string",
        "values": [],
      },
      {
        "config": {},
        "labels": undefined,
        "name": "target",
        "type": "string",
        "values": [],
      },
      {
        "config": {},
        "labels": undefined,
        "name": "mainStat",
        "type": "string",
        "values": [],
      },
    ],
    "meta": {
      "preferredVisualisationType": "nodeGraph",
    },
    "name": "edges",
    "refId": "A",
  },
  "nodes": {
    "fields": [
      {
        "config": {},
        "labels": undefined,
        "name": "id",
        "type": "string",
        "values": [],
      },
      {
        "config": {},
        "labels": undefined,
        "name": "title",
        "type": "string",
        "values": [],
      },
      {
        "config": {},
        "labels": undefined,
        "name": "mainStat",
        "type": "string",
        "values": [],
      },
    ],
    "meta": {
      "preferredVisualisationType": "nodeGraph",
    },
    "name": "nodes",
    "refId": "A",
  },
}
`;
